--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,8 @@ dependencies:
   firebase_core: ^1.13.1
   firebase_auth: ^3.3.9
   email_validator: ^2.0.1
+  google_sign_in: ^5.2.4
+  cloud_firestore: ^3.1.10
 
 dev_dependencies:
   flutter_test:
@@ -61,8 +63,9 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
+  assets:
+    - assets/icons/
+    
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
